k8s/gxsio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gxsio-docs-route
  namespace: docs
spec:
  parentRefs:
    - name: main-gateway
      namespace: ingress
  hostnames:
    - 'docs.graphxserver.io'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gxsio-docs-svc
          port: 80
